issue with single line without spacing in invite window (bug 3565)

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Header.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Header.less
@@ -363,7 +363,7 @@ body {
         .flexAlignV;
         width: 100%;
         height: 100%;
-        padding: 0 15px 0 100px;
+        padding: 0 23px 0 100px;
         .boxSizing;
     }
     .notifyDetails {
@@ -403,7 +403,6 @@ body {
     }
 }
 .inviteTxtWpr {
-    max-width: 95%;
     max-height: 48px;
     overflow: hidden;
 }
