--- a/Zbang.Cloudents.Mvc4WebRole/Content/Header.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Header.rtl.css
@@ -342,7 +342,7 @@ body {
   align-items: center;
   width: 100%;
   height: 100%;
-  padding: 0 100px 0 15px;
+  padding: 0 100px 0 23px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -384,7 +384,6 @@ body {
   fill: #fff;
 }
 .inviteTxtWpr {
-  max-width: 95%;
   max-height: 48px;
   overflow: hidden;
 }
